# Tweetoscope

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  requirements.txt  setup.py
config/: collector.ini  collector_test.ini  params.config
config/default/: server.properties
config/deployment/: collector.ini  dashboard_config.json  hawkes_config.json  learner_config.json  monitoring_config.json  params.config  predictor_config.json
config/development/: collector.ini  hawkes_config.json  learner_config.json  predictor_config.json
config/test/: collector.ini  params.config
data/: cascade_ex.npy
deployments/tweet-collector/: Dockerfile  deployment.yaml
deployments/tweet-generator/: Dockerfile  deployment.yaml
deployments/tweet-hawkes/: deployment.yaml  deployment.yml
deployments/tweet-learner/: deployment.yaml  deployment.yml
deployments/tweet-predictor/: deployment.yaml  deployment.yml
deployments/tweet-python/: Dockerfile
doc/: CMakeLists.txt  Doxyfile.in
infrastructure/: install.sh
infrastructure/grafana/: datasources.yml  kustomization.yml
infrastructure/kafka/: Dockerfile  kafka.yml  kustomization.yml  service.yml  zookeeper.yaml  zookeeper.yml
infrastructure/loki/: config-map.yml  deployment.yml  kustomization.yml  service.yml
infrastructure/prometheus/: config-map.yml  deployment.yml  kustomization.yml
infrastructure/tweet-collector/: Dockerfile
infrastructure/tweet-generator/: Dockerfile
scripts/: dockerbuild.sh  kafka.sh
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  Consumer.hpp  Logger.hpp  Producer.hpp
src/cpp/TweetCollector/: CMakeLists.txt  Processor.hpp  TweetCollectorParams.hpp  TweetStreams.hpp  main.cpp
src/cpp/TweetGenerator/: CMakeLists.txt  TweetGenerator.hpp  main.cpp
src/cpp/tweetgenerator/: CMakeLists.txt  tweet-generator.cpp
src/ml/: dashboard.py  hawkes.py  learner.py  monitoring.py  predictor.py
src/ml/utils/: logger.py
tests/cpp/: CMakeLists.txt  CollectorTest.cpp
tests/python/: hawkes_test.py  predictor_test.py
